# QAT_Engine

./: .gitignore  .gitmodules  LICENSE  LICENSE.OPENSSL  LICENSE.PLOCK  Makefile  Makefile.am  README.md  SECURITY.md  atomic-ops.h  autogen.sh  cmn_mem_drv_inf.c  cmn_mem_drv_inf.h  configure  configure.ac  driver_install.sh  e_qat.c  e_qat.ec  e_qat.h  e_qat.txt  e_qat_err.c  e_qat_err.h  fips_install.sh  intkat.sh  multi_thread_qaememutils.c  multibuff_ec.c  multibuff_ec.h  multibuff_ecx.c  multibuff_ecx.h  multibuff_freelist.c  multibuff_freelist.h  multibuff_init.c  multibuff_init.h  multibuff_polling.c  multibuff_polling.h  multibuff_queue.c  multibuff_queue.h  multibuff_request.h  multibuff_rsa.c  multibuff_rsa.h  (+198 more)
.github/workflows/: c-cpp.yml
.tools/: Makefile.am  Makefile.in  autogen.sh  configure  configure.ac
dockerfiles/: README.md
dockerfiles/haproxy/: Dockerfile  haproxy.cfg
dockerfiles/qat_crypto_base/: Dockerfile
docs/: additional_information.md  apps.md  async_job.md  bssl_support.md  config_options.md  engine_specific_messages.md  features.md  hardware_requirements.md  install.md  legal.md  licensing.md  limitations.md  openssl_config.md  qat_coex.md  qat_common.md  qat_hw.md  qat_hw_algo.md  qat_hw_kpt.md  qat_sw.md  software_requirements.md  troubleshooting.md
fips/: driver_install.sh  qatprovider-fips.spec
kpt/apps/: kpt_dev_pp.c  kpt_dev_pp.h  kpt_ecc_key.c  kpt_key.h  kpt_rsa_key.c  kpt_swk.c  kpt_swk.h  main.c
kpt/lib/: README.md  kpt.c  kpt.h  kpt_utils.h
qat/config/c2xxx/multi_process_optimized/: c2xxx_qa_dev0.conf  c2xxx_qa_dev0_single_ae.conf
qat/config/c2xxx/multi_thread_optimized/: c2xxx_qa_dev0.conf  c2xxx_qa_dev0_single_ae.conf  c2xxx_qa_single_dev0.conf
qat/config/c3xxx/multi_process_event-driven_optimized/: c3xxx_dev0.conf
qat/config/c3xxx/multi_process_optimized/: c3xxx_dev0.conf
qat/config/c3xxx/multi_thread_event-driven_optimized/: c3xxx_dev0.conf
qat/config/c3xxx/multi_thread_optimized/: c3xxx_dev0.conf
qat/config/c6xx/multi_process_event-driven_optimized/: c6xx_dev0.conf  c6xx_dev2.conf
qat/config/c6xx/multi_process_optimized/: c6xx_dev0.conf  c6xx_dev1.conf  c6xx_dev2.conf
qat/config/c6xx/multi_thread_event-driven_optimized/: c6xx_dev0.conf  c6xx_dev1.conf  c6xx_dev2.conf
qat/config/c6xx/multi_thread_optimized/: c6xx_dev0.conf  c6xx_dev1.conf  c6xx_dev2.conf
qat/config/dh895xcc/multi_process_event-driven_optimised/: dh895xcc_qa_dev0.conf
qat/config/dh895xcc/multi_process_event-driven_optimized/: dh895xcc_dev0.conf  dh895xcc_qa_dev0.conf
qat/config/dh895xcc/multi_process_optimized/: dh895xcc_dev0.conf  dh895xcc_qa_dev0.conf
qat/config/dh895xcc/multi_thread_event-driven_optimised/: dh895xcc_qa_dev0.conf
qat/config/dh895xcc/multi_thread_event-driven_optimized/: dh895xcc_dev0.conf  dh895xcc_qa_dev0.conf
qat/config/dh895xcc/multi_thread_optimized/: dh895xcc_dev0.conf  dh895xcc_qa_dev0.conf
qat/config/dh895xcc_upstream/multi_process_event-driven_optimized/: dh895xcc_dev0.conf
qat/config/dh895xcc_upstream/multi_process_optimized/: dh895xcc_dev0.conf
qat/config/dh895xcc_upstream/multi_thread_event-driven_optimized/: dh895xcc_dev0.conf
qat/config/dh895xcc_upstream/multi_thread_optimized/: dh895xcc_dev0.conf
qat/config/dh89xxcc/multi_process_optimized/: dh89xxcc_qa_dev0.conf  dh89xxcc_qa_dev0_single_accel.conf  dh89xxcc_qa_dev1.conf  dh89xxcc_qa_dev1_single_accel.conf
qat/config/dh89xxcc/multi_thread_optimized/: dh89xxcc_qa_dev0.conf  dh89xxcc_qa_dev0_single_accel.conf  dh89xxcc_qa_dev1.conf
qat_contig_mem/: Makefile  qat_contig_mem.c  qat_contig_mem.h  qat_contig_mem_test.c
qat_hw_config/200xx/multi_process/: 200xx_dev0.conf
qat_hw_config/200xx/multi_thread/: 200xx_dev0.conf
qat_hw_config/4xxx/multi_process/: 4xxx_dev0.conf
qat_hw_config/4xxx/multi_thread/: 4xxx_dev0.conf
qat_hw_config/c3xxx/multi_process/: c3xxx_dev0.conf
qat_hw_config/c3xxx/multi_thread/: c3xxx_dev0.conf
qat_hw_config/c4xxx/multi_process/: c4xxx_dev0.conf
qat_hw_config/c4xxx/multi_thread/: c4xxx_dev0.conf
qat_hw_config/c6xx/multi_process/: c6xx_dev0.conf
qat_hw_config/c6xx/multi_thread/: c6xx_dev0.conf
qat_hw_config/dh895xcc/multi_process/: dh895xcc_dev0.conf
qat_hw_config/dh895xcc/multi_thread/: dh895xcc_dev0.conf
test/: main.c  tests.c  tests.h  tests_aes128_ccm.c  tests_aes128_gcm.c  tests_aes192_ccm.c  tests_aes256_ccm.c  tests_aes256_gcm.c  tests_aes_cbc_hmac_sha.c  tests_chacha20_poly1305.c  tests_dh.c  tests_dsa.c  tests_ecdh.c  tests_ecdsa.c  tests_ecx.c  tests_hkdf.c  tests_prf.c  tests_rsa.c  tests_sha2.c  tests_sha3.c  tests_sm2.c  tests_sm3.c  tests_sm4_cbc.c  tests_sm4_ccm.c  tests_sm4_gcm.c
test_bssl/: main.c  test_bssl_ecdsa.c  test_bssl_ecdsa.h  test_bssl_rsa.c  test_bssl_rsa.h  test_bssl_utils.c  test_bssl_utils.h
